% \newcommand{\PR}{\Sexpr[results=rd]{tools:::Rd_expr_PR(#1)}}

\name{fSRM}
\title{News for package 'fSRM'}
\encoding{UTF-8}

\section{Version 0.6.3}{

\subsection{Changes}{
	\itemize{
		\item Minor bug fix in import()
	}
}
}


\section{Version 0.6.2}{

\subsection{Changes}{
	\itemize{
		\item Updated the \code{import} function so that three indicators are possible.
		\item Fixed minor error in examples.
		\item fSRM now gives an error if users try to compare more than two groups.
		\item Updated CITATION file
	}
}
}


\section{Version 0.6.1}{

\subsection{Changes}{
	\itemize{
		\item Changed order of dyads in the mean-structure plot. Order now is the same as in the variance-decomposition plot.
	}
}
}


\section{Version 0.6}{

\subsection{Changes}{
	\itemize{
		\item Prettier output for \code{equalMeans} function.
		\item Fixed a bug when variances where constrained to be positive in a model with group comparisons and no mean structures: In this case, only the variances of the first group were constrained. Now it's fixed: both groups are constrained.
		\item Added new data sets: clinical, clinical.wide, two.groups, two.groups.wide
		\item When running a two-group analysis, plots automatically show both groups side-by-side
		\item Fixed a bug where the ordering of labels in the meanstructure-plot was wrong
	}
}
}


\section{Version 0.5}{

\subsection{Changes}{
	\itemize{
		\item Removed \code{setZero} option from \code{fSRM}. Replaced it with the option \code{noNegVar}. If this is TRUE, all variances are constrained to be > 0. (Older publications contrained negative variances to be exactly zero. This, however, leads to a distortion of the df). By default, this option is turned off, as negative variances should be recognized as an indicator of model misspecification.