@@ -2,8 +2,8 @@ Encoding: UTF-8
 Package: fSRM
 Type: Package
 Title: Social Relations Analyses with Roles ("Family SRM")
-Version: 0.6.3
-Date: 2015-12-21
+Version: 0.6.4
+Date: 2016-01-22
 Author: Felix Schönbrodt, Lara Stas, Tom Loeys
 Maintainer: Felix Schönbrodt <felix@nicebread.de>
 Description: Social Relations Analysis with roles ("Family SRM") are computed,
@@ -21,6 +21,7 @@ Imports:
     foreign,
     tcltk,
     tcltk2,
-    gridExtra
+    gridExtra,
+	methods
 License: GPL (>=2)
 RoxygenNote: 5.0.1
