@@ -18,5 +18,15 @@ import(reshape2)
 import(tcltk)
 import(tcltk2)
 importFrom(foreign,read.spss)
+importFrom(grDevices,gray)
 importFrom(gridExtra,grid.arrange)
+importFrom(methods,show)
 importFrom(scales,percent)
+importFrom(stats,addmargins)
+importFrom(stats,formula)
+importFrom(stats,pchisq)
+importFrom(utils,packageDescription)
+importFrom(utils,packageVersion)
+importFrom(utils,read.csv)
+importFrom(utils,read.table)
+importFrom(utils,str)
