@@ -1,0 +1,11 @@
+## Test environments
+* local OS X install, R 3.2.3
+* ubuntu 12.04 (on travis-ci), R 3.2.3
+* win-builder (devel and release)
+
+## R CMD check results
+There were no ERRORs, WARNINGs, or relevant NOTEs. 
+
+
+## Downstream dependencies
+None.
